--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "vite": "^4.0.0",
-    "glob": "^8.1.0"
+    "glob": "^8.1.0",
+    "vite": "^4.0.0"
   },
   "license": "ISC",
   "dependencies": {
+    "swiper": "^11.2.8",
     "vite-plugin-full-reload": "^1.0.5",
     "vite-plugin-html-inject": "^1.0.1"
   }
